Agrega elementos sencillos en layout principal para ingresar y enviar un mensaje

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ActivitiesCommunication</string>
+    <string name="insert_message">Ingresa un mensaje</string>
+    <string name="send">Enviar</string>
 </resources>
