Agrega elementos sencillos al Layout del nuevo Activity para mostrar el mensaje que va a recibir

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ActivitiesCommunication</string>
     <string name="insert_message">Ingresa un mensaje</string>
     <string name="send">Enviar</string>
+    <string name="received_message_description">El mensaje recibido es:</string>
 </resources>
